# trait-solver

./: Cargo.toml  build.rs
src/: annotate.rs  apply.rs  ast.rs  data.rs  diag.rs  display.rs  helper.rs  infer.rs  instantiate.rs  lexer.rs  lib.rs  main.rs  parser.rs  resolve.rs  solver.rs  token.rs  util.rs
tests/: display.rs  infer.rs  level0.rs  level1.rs  level2.rs  level3.rs  lexer.rs  parser.rs  resolve.rs  source.rs  trait_solving.rs  traits.rs  type_inference.rs  types.rs  unify.rs  util.rs
