[package]
name = "aqua"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aqua"
path = "src/main.rs"

[dependencies]
ariadne = "0.4.0"
smol_str = "0.2.1"

# clap = { version = "4.4.16", features = ["derive", "string"] }
#
# [build-dependencies]
# built = { version = "0.7.1", features = ["chrono"] }

[dev-dependencies]
indoc = "2.0.4"
